# flask-assets-tutorial

./: .env.example  .gitignore  Makefile  Pipfile  README.md  config.py  gunicorn.conf.py  log.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: FUNDING.yml  dependabot.yml
application/: __init__.py  assets.py
application/admin/: admin_routes.py
application/main/: main_routes.py
application/main/static/: homepage.less
application/main/templates/: index.jinja2
flask_assets_tutorial/: __init__.py  assets.py
flask_assets_tutorial/admin/: admin_routes.py  routes.py
flask_assets_tutorial/admin/templates/: dashboard.jinja2
flask_assets_tutorial/main/: main_routes.py  routes.py
flask_assets_tutorial/main/templates/: index.jinja2
flask_assets_tutorial/static/src/js/: main.js
flask_assets_tutorial/static/src/less/: global.less  nav.less  variables.less
flask_assets_tutorial/templates/: analytics.jinja2  layout.jinja2  meta.jinja2  navigation-default.jinja2  navigation-loggedin.jinja2
