[tool.poetry]
name = "flask_assets_tutorial"
version = "0.1.1"
description = "Flask application which compiles ands serves frontend assets with Flask-Assets."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-assets/"
repository = "https://github.com/hackersandslackers/flask-assets-tutorial/"
documentation = "https://hackersandslackers.com/flask-assets/"
keywords = [
    "Flask",
    "Flask-Assets",
    "Bundles",
    "Frontend",
    "Tutorial"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "*"
flask-assets = "*"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
python-dotenv = "*"
pytest = "*"
black = "*"
isort = "*"
gunicorn = "*"
flask-sock = "*"
flake8 = "7.3.0"
loguru = "^0.7.2"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-assets-tutorial/issues"

[build-system]
requires = ["poetry-core>=2.0.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.isort]
profile = "black"
src_paths = [
    "flask_assets_tutorial",
    "config",
    "log"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120
target-version = ['py312']
